# netchat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  netchat_src.tgz
.github/workflows/: build.yml
src/: server.cpp
web/: index.html
